--- a/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Shared/_Layout.cshtml
+++ b/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - ITUniversity.Tasks.Web</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 </head>
 <body>
     <header>
@@ -23,7 +24,7 @@
                         </li>
                         <li class="nav-item">
                             @*<a class="nav-link text-dark" asp-area="" asp-controller="Task" asp-action="Index">Task</a>*@
-                            @Html.ActionLink("Tasks", "Index", "Task",null, htmlAttributes: new{ @class="nav-link text-dark"})
+                            @Html.ActionLink("Задачи", "Index", "Task",null, htmlAttributes: new{ @class="nav-link text-dark"})
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
