--- a/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Task/Create.cshtml
+++ b/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Task/Create.cshtml
@@ -1,37 +1,44 @@
-﻿@using ITUniversity.Tasks.Entities;
+﻿
 
-@model TaskBase
+@model TaskCreateModel
 
 
 @using (Html.BeginForm("Create", "Task"))
 {
 
-    <div class="form-group">
+    <div class="form-group ">
         <div class="col-2">
-            @Html.Label("Subject")
+            @Html.LabelFor(model => Model.Subject, new { @class = "" })
         </div>
         <div class="col-4">
             @Html.EditorFor(model => Model.Subject, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => Model.Subject)
         </div>
     </div>
     <div class="form-group">
         <div class="col-2">
-            @Html.Label("Description")
+            @Html.LabelFor(model=>Model.Description,  new { @class = "" })
         </div>
         <div class="col-4">
-            @Html.EditorFor(model => Model.Description, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.TextAreaFor(model => Model.Description,  new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => Model.Description)
         </div>
     </div>
-    @Html.Hidden("CreationDate", DateTime.Now, null)
     <div class="form-group">
         <div class="row">
             <div class="col-2 text-center">
-                <input type="submit" value="Create" class="btn btn-dark" />
+                <input type="submit" value="Create" class="btn btn-success" />
             </div>
             <div class="col-2 text-center">
-                @Html.ActionLink("Cancel", "Index", "Task", null, new { @class = "btn btn-dark" })
+                @Html.ActionLink("Cancel", "Index", "Task", null, new { @class = "btn btn-danger" })
             </div>
         </div>
     </div>
 
- }
+}
+
+@section scripts
+{
+    <script src="~/lib/jquery/dist/jquery.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+}
