--- a/ITUniversity.Tasks/ITUniversity.Tasks.Web/wwwroot/css/site.css
+++ b/ITUniversity.Tasks/ITUniversity.Tasks.Web/wwwroot/css/site.css
@@ -51,6 +51,27 @@ button.accept-policy {
   line-height: inherit;
 }
 
+.field-validation-error {
+color: red;
+}
+
+.field-validation-valid {
+display: none;
+}
+
+input.input-validation-error {
+border: 1px solid #b94a48;
+}
+
+/*input[type="checkbox"].input-validation-error {
+border: 0 none;
+}
+.validation-summary-errors {
+color: #b94a48;
+}
+.validation-summary-valid {
+display: none;
+}
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
