--- a/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Task/Edit.cshtml
+++ b/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Task/Edit.cshtml
@@ -1,12 +1,14 @@
-﻿
-
-@model TaskCreateModel
+﻿@model TaskEditModel
 
 
-@using (Html.BeginForm("Create", "Task"))
+@using (Html.BeginForm("Edit", "Task"))
 {
-
+    <div class="form-group">
+        @Html.HiddenFor(model => Model.Id)
+    </div>
     <div class="form-group ">
+
+        
         <div class="col-2">
             @Html.LabelFor(model => Model.Subject, new { @class = "" })
         </div>
@@ -17,17 +19,17 @@
     </div>
     <div class="form-group">
         <div class="col-2">
-            @Html.LabelFor(model=>Model.Description,  new { @class = "" })
+            @Html.LabelFor(model => Model.Description, new { @class = "" })
         </div>
         <div class="col-4">
-            @Html.TextAreaFor(model => Model.Description,  new { @class = "form-control" })
+            @Html.TextAreaFor(model => Model.Description, new { @class = "form-control" })
             @Html.ValidationMessageFor(model => Model.Description)
         </div>
     </div>
     <div class="form-group">
         <div class="row">
             <div class="col-2 text-center">
-                <input type="submit" value="Добавить" class="btn btn-success" />
+                <input type="submit" value="Сохранить" class="btn btn-success" />
             </div>
             <div class="col-2 text-center">
                 @Html.ActionLink("Отмена", "Index", "Task", null, new { @class = "btn btn-danger" })
