--- a/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Task/Create.cshtml
+++ b/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Task/Create.cshtml
@@ -1,11 +1,14 @@
 ﻿
 
 @model TaskCreateModel
-
+@*
+@{
+    const string formId = "task_create_form";
+    var returnUrl = Url.Action("Index", "Task");
+}*@
 
 @using (Html.BeginForm("Create", "Task"))
 {
-
     <div class="form-group ">
         <div class="col-2">
             @Html.LabelFor(model => Model.Subject, new { @class = "" })
@@ -17,28 +20,33 @@
     </div>
     <div class="form-group">
         <div class="col-2">
-            @Html.LabelFor(model=>Model.Description,  new { @class = "" })
+            @Html.LabelFor(model => Model.Description, new { @class = "" })
         </div>
         <div class="col-4">
-            @Html.TextAreaFor(model => Model.Description,  new { @class = "form-control" })
+            @Html.TextAreaFor(model => Model.Description, new { @class = "form-control" })
             @Html.ValidationMessageFor(model => Model.Description)
         </div>
     </div>
     <div class="form-group">
         <div class="row">
             <div class="col-2 text-center">
-                <input type="submit" value="Добавить" class="btn btn-success" />
+                <input type="submit" value="Добавить" class="btn btn-success" )" />
             </div>
             <div class="col-2 text-center">
                 @Html.ActionLink("Отмена", "Index", "Task", null, new { @class = "btn btn-danger" })
             </div>
         </div>
     </div>
-
 }
 
-@section scripts
+    <script text="text/javascript">
+        function save(formId) {
+
+        }
+    </script>
+
+    @section scripts
 {
-    <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
-}
+        <script src="~/lib/jquery/dist/jquery.js"></script>
+        <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    }
