--- a/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Task/Index.cshtml
+++ b/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Task/Index.cshtml
@@ -25,7 +25,9 @@
                 </tr>
             }
         </table>
-        @Html.ActionLink("Добавить задачу", "Create", "Task", null, new { @class = "btn btn-primary" })
+        <a class="btn btn-primary" style="float: right; cursor: pointer;" href="Task/Create">Добавить задачу</a>
+        @*@Html.ActionLink("Добавить задачу", "Create", "Task", null, new { @class = "btn btn-primary" })*@
+
     </div>
 </div>
 
