Блокировка пользователей, отображение только незаблокированных

--- a/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Shared/_Layout.cshtml
+++ b/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Shared/_Layout.cshtml
@@ -20,16 +20,18 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex flex-sm-row-reverse">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Главная</a>
                         </li>
                         <li class="nav-item">
                             @*<a class="nav-link text-dark" asp-area="" asp-controller="Task" asp-action="Index">Task</a>*@
                             @Html.ActionLink("Задачи", "Index", "Task",null, htmlAttributes: new{ @class="nav-link text-dark"})
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            @Html.ActionLink("Пользователи", "Index", "User", null, htmlAttributes: new{ @class="nav-link text-dark"})
                         </li>
                     </ul>
+                    @Html.ActionLink("Выйти", "Logout", "Account", null, new { @class="btn btn-outline-info"})
+                    
                 </div>
             </div>
         </nav>
