--- a/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Task/Index.cshtml
+++ b/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Task/Index.cshtml
@@ -1,19 +1,11 @@
-﻿@using ITUniversity.Tasks.Entities
-@*
-    For more information on enabling MVC for empty projects, visit http://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using ITUniversity.Tasks.Application.Services.Dto
 
-@{
-    ViewData["title"] = "Cписок задач";
-
-}
-
-@model ICollection<TaskBase>
+@model ICollection<TaskDto>
 
 
 
 
-<div class="card">    
+<div class="card">
     <div class="card-body">
         <table class="table table-borderless">
             @foreach (var task in Model)
@@ -25,7 +17,7 @@
                 </tr>
             }
         </table>
-        <a class="btn btn-primary" style="float: right; cursor: pointer;" href="Task/Create">Добавить задачу</a>
+        <a class="btn btn-primary" style="float: right; cursor: pointer;" href="Task/Add">Добавить задачу</a>
         @*@Html.ActionLink("Добавить задачу", "Create", "Task", null, new { @class = "btn btn-primary" })*@
 
     </div>
