--- a/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Task/Edit.cshtml
+++ b/ITUniversity.Tasks/ITUniversity.Tasks.Web/Views/Task/Edit.cshtml
@@ -1,36 +1,43 @@
-﻿@model TaskEditModel
+﻿@using ITUniversity.Tasks.Application.Services
+@using ITUniversity.Tasks.Web.Models
 
+@model TaskEditModel
 
-@using (Html.BeginForm("Edit", "Task"))
-{
-    <div class="form-group">
-        @Html.HiddenFor(model => Model.Id)
-    </div>
-    
-    <div class="form-group">
-        <div class="col-2">
-            @Html.LabelFor(model => Model.Description, new { @class = "" })
-        </div>
-        <div class="col-4">
-            @Html.TextAreaFor(model => Model.Description, new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => Model.Description)
-        </div>
-    </div>
-    <div class="form-group">
-        <div class="row">
-            <div class="col-2 text-center">
-                <input type="submit" value="Сохранить" class="btn btn-success" />
-            </div>
-            <div class="col-2 text-center">
-                @Html.ActionLink("Отмена", "Index", "Task", null, new { @class = "btn btn-danger" })
-            </div>
-        </div>
-    </div>
+@inject IUserAppService UserAppService
 
+@{
+    var users = UserAppService.GetAll().Select(user => new SelectListItem { Text = user.Login, Value = user.Id.ToString() });
+    var formId = $"task_{Model.Id}";
+    var backUrl = Url.Action("Index", "Task");
 }
+
+<div class="card">
+    <div class="card-header">
+        Редактирование задачи - @Model.Subject
+    </div>
+    <div class="card-body">
+        <form id="@formId">
+            @Html.HiddenFor(model => model.Id)
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Description)
+                @Html.TextAreaFor(model => model.Description, new { @class = "form-control" })
+            </div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.Executor)
+                @Html.DropDownListFor(model => model.Executor, users, string.Empty, new { @class = "form-control" })
+            </div>
+
+            <input type="button" class="btn btn-success" value="Сохранить" onclick="task.update('@formId', '@backUrl');" />
+            <a class="btn btn-danger" href="@backUrl">Отмена</a>
+        </form>
+    </div>
+</div>
 
 @section scripts
 {
-    <script src="~/lib/jquery/dist/jquery.js"></script>
-    <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="~/view-resources/task/scripts.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 }
